[package]
name = "tcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tcpserver"
path = "src/tcpserver.rs"

[[bin]]
name = "tcpclient"
path = "src/tcpclient.rs"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
